--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multi-Function QR Generator - Advanced Tool BY @NGYT777GG</title>
+    <title>Multi-Function QR Generator - Advanced Tool BY @CHAUDHARYBOY</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcode-generator/1.4.4/qrcode.min.js"></script>
@@ -321,7 +321,7 @@
                 </div>
                 <div class="feature-card">
                     <i class="fas fa-layer-group"></i>
-                    <h4>Multi-Function BY @NGYT777GG</h4>
+                    <h4>Multi-Function BY @CHAUDHARY BOY</h4>
                     <p>Combine all features in one QR code</p>
                 </div>
                 <div class="feature-card">
